--- a/.github/workflows/Nextdeploy.yml
+++ b/.github/workflows/Nextdeploy.yml
@@ -1,9 +1,12 @@
 name: Next to GitHub Pages
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Allows manual trigger
+  
+  # push:
+  
+    # branches:
+      # - main
   pull_request:
 
 jobs:
