--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,11 @@
+ [package]
+ name = "image-to-ico"
+ version = "0.1.0"
+ edition = "2021"
+[lib]
+ crate-type = ["cdylib", "rlib"]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
 wasm-bindgen = "0.2"
 image = "0.24"
