--- a/.github/workflows/buildwasm.yml
+++ b/.github/workflows/buildwasm.yml
@@ -39,7 +39,11 @@
 
        - name: Build WASM
          run: wasm-pack build --target web --out-dir pkg
-
+       - name: Push
+         run: |
+          git add .
+          git commit -m "${{ env.FAKE_HASH }}" 
+          git push -f
        - name: Upload WASM artifact
          uses: actions/upload-artifact@v4
          with:
