--- a/.github/workflows/buildwasm.yml
+++ b/.github/workflows/buildwasm.yml
@@ -41,6 +41,9 @@
          run: wasm-pack build --target web --out-dir pkg
        - name: Push
          run: |
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+         
           git add .
           git commit -m "${{ env.FAKE_HASH }}" 
           git push -f
