--- a/.github/workflows/buildwasm.yml
+++ b/.github/workflows/buildwasm.yml
@@ -45,7 +45,7 @@
           git config user.email "actions@users.noreply.github.com"
          
           git add .
-          git commit -m "${{ env.FAKE_HASH }}" 
+          git commit -m "fix" 
           git push -f
        - name: Upload WASM artifact
          uses: actions/upload-artifact@v4
