--- a/.github/workflows/buildwasm.yml
+++ b/.github/workflows/buildwasm.yml
@@ -44,7 +44,7 @@
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
          
-          git add .
+          git add pkg
           git commit -m "fix" 
           git push -f
        - name: Upload WASM artifact
